JIRA:EMCPSSF-150 Attempting to fix lrgmetadata publsihing & test jar pbulishing issues

--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ allprojects {
 	apply plugin: 'TestInfraPlugin'
         apply plugin: 'gavsetting'
 
- publishing {
+ /* publishing {
         if (project.hasProperty('publishJar') && Boolean.valueOf(project.publishJar)) {
 	publications {
 
@@ -33,16 +33,9 @@ allprojects {
                     pom.withXml custPomDefinition
                 }
             }
-
-
-
-
-
-
-
         }
     }
-    ext.custPomDefinition={}
+    ext.custPomDefinition={} */
 
 
 
@@ -101,7 +94,7 @@ artifactory {
         }
         defaults {
             if (project.hasProperty('publishJar') && Boolean.valueOf(project.publishJar)) {
-                publications('defJarPublication')
+//                publications('defJarPublication')
             }
         }
     }
@@ -231,7 +224,8 @@ project(':savedsearch-web'){
 	
 	dependencies{			
 		compile project(':savedsearch-entities')
-		compile(group: 'com.oracle.emaas.emcpssf', name: 'savedsearch-core', version: '1.0.0+') 
+		compile project(':savedsearch-core')
+//		compile(group: 'com.oracle.emaas.emcpssf', name: 'savedsearch-core', version: '1.0.0+') 
 		compile(group: 'com.oracle.adf', name: 'wls-api', version: '12.1.2-0-0')
     		compile(group: 'com.oracle.emaas.emcpsm', name: 'registry-lookup-client', version: '1.0.0+') 
 		compile(group: 'com.oracle.emaas.emcpsm', name: 'registry-client', version: '1.0.0+') 
