--- a/savedsearch-ear/build.gradle
+++ b/savedsearch-ear/build.gradle
@@ -28,7 +28,7 @@ dependencies
 {
 	deploy (project(path:':savedsearch-web', configuration:'archives')) {transitive = false}
 
-	earlib (group: 'com.oracle.emaas.emcpssf', name: 'savedsearch-core', version: '1.0.0+'){transitive = false}
+	earlib (group: 'com.oracle.emaas.emcpssf.upgrade', name: 'savedsearch-core', version: '1.0.0+'){transitive = false}
 	earlib (project(':savedsearch-entities')){transitive = false}
 	earlib (project(':savedsearch-web-utils')){transitive = false} 
 	earlib(group: 'com.oracle.emaas.emcpsm', name: 'registry-lookup-client', version: '1.0.0+') {transitive=false }
