--- a/savedsearch-entities/build.gradle
+++ b/savedsearch-entities/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'eclipse'
 /* By default the group is set to the directory name, as 'lrg_branch' which is inconsistent name. Hence
  * Setting the group as 'com.oracle.emaas.emcpssf (as suggested by DevTools team)
  */
-group = 'com.oracle.emaas.emcpssf'
+group = 'com.oracle.emaas.emcpssf.upgrade'
 version = '1.0.1'
 
 jar {
