--- a/savedsearch-web-utils/build.gradle
+++ b/savedsearch-web-utils/build.gradle
@@ -8,7 +8,7 @@ jar {
 }
  
 dependencies { 
-        compile(group: 'com.oracle.emaas.emcpssf', name: 'savedsearch-core', version: '1.0.0+')   
+        compile(group: 'com.oracle.emaas.emcpssf.upgrade', name: 'savedsearch-core', version: '1.0.0+')   
         compile(group: 'org.apache.logging.log4j', name:'log4j-core', version:'2.0.1')
         compile(group: 'org.apache.logging.log4j', name:'log4j-api', version:'2.0.1')
         compile(group: 'com.oracle.adf', name: 'wls-api', version: '12.1.2-0-0')
