--- a/savedsearch-web/build.gradle
+++ b/savedsearch-web/build.gradle
@@ -12,7 +12,7 @@ apply plugin: 'TestInfraPlugin'
 apply from: 'test.gradle'
 
 jar.archiveName='emcpssf_qa_test.jar'
-group = 'com.oracle.emaas.emcpssf'
+group = 'com.oracle.emaas.emcpssf.upgrade'
 //version = '1.0.1'
 
 
@@ -186,7 +186,7 @@ sourceSets {
 dependencies {
 	providedCompile project(':savedsearch-entities'){transitive = false}
 //	providedCompile project(':savedsearch-core'){transitive = false}
-	providedCompile(group: 'com.oracle.emaas.emcpssf', name: 'savedsearch-core', version: '1.0.0+')  {transitive = false}
+	providedCompile(group: 'com.oracle.emaas.emcpssf.upgrade', name: 'savedsearch-core', version: '1.0.0+')  {transitive = false}
 	providedCompile(group: 'javax.servlet', name:'servlet-api', version:'2.5'){transitive = false}
 //	providedCompile(group: 'javax', name: 'ejb', version: '3.2.0')
 	providedCompile(group: 'com.sun.jersey', name: 'jersey-client', version: '1.17')
