--- a/tests/suites/emcpssf_dev_test_3n.gradle
+++ b/tests/suites/emcpssf_dev_test_3n.gradle
@@ -53,14 +53,23 @@ maven {
             url = "${artifactory_contextUrl}/${artifactory_virtual_repoKey}" }
     }
 dependencies {
-    testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-core-integ-tests', version: "${REPO_BID}"){
-exclude('module':'groovy')
-}
-testConfig group: 'com.oracle.emdi.test', name: 'emaas_smalldeployment', version: "${integDeployVersion}"
-configurations{
-restAssured.exclude module: "groovy"
+	testConfig group: 'com.oracle.emdi.test', name: 'emaas_smalldeployment', version: "${integDeployVersion}"
 
-}
+	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-core-integ-tests', version: "${REPO_BID}"){ exclude('module':'groovy')}
+	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-core', version: "${REPO_BID}") {transitive = false}
+	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-entities', version: "${REPO_BID}") {transitive = false}
+
+	testConfig(group: 'com.oracle.jdbc', name: 'ojdbc6', version: '12.1.0.1.0'){transitive = false}
+	testConfig(group: 'org.apache.logging.log4j', name:'log4j-core', version:'2.0.2'){ transitive = false }
+	testConfig(group: 'org.apache.logging.log4j', name:'log4j-api', version:'2.0.2'){ transitive = false }
+	testConfig(group: 'org.eclipse.persistence', name: 'javax.persistence', version: '2.0.5'){ transitive = false }
+	testConfig(group: 'org.eclipse.persistence', name: 'eclipselink', version: '2.4.2') { transitive = false }
+	testConfig(group: 'javax.transaction', name: 'javax.transaction-api', version: '1.2'){ transitive = false }
+	testConfig(group: 'org.codehaus.jettison', name: 'jettison', version: '1.3.4'){ transitive = false }    	
+
+	configurations {
+		restAssured.exclude module: "groovy"
+	}
 }
 
 task small_deploy_3n_block(type: EMTest) {
