JIRA:EMCPSSF-150 remove toold jar from build process, its not used anywhere , anymore

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include 'savedsearch-core', 'savedsearch-entities','savedsearch-web','savedsearch-web-utils','savedsearch-ear','savedsearch-schema','savedsearch-tools' 
+include 'savedsearch-core', 'savedsearch-entities','savedsearch-web','savedsearch-web-utils','savedsearch-ear','savedsearch-schema' 
