--- a/savedsearch-entities/build.gradle
+++ b/savedsearch-entities/build.gradle
@@ -19,6 +19,20 @@ dependencies {
 	compile(group: 'org.eclipse.persistence', name: 'eclipselink', version: '2.4.2') {transitive = false}
 }
 
+/*
+	NOTE: 
+		PUBLISHING ==> We use artifactoryPublish to publish artifacts, in publications block
+				we publish...
+					1. savedsearch-entties jar itself
+				The "group" of this JAR is NOT com.oracle.emaas.emcpssf - instead 
+				there's a "test" added to it - Hudson jobs prohibit publishing with root group & 
+				this allows for clear separation of artifacts. 
+		RESOLUTION ==> All JARs are produced & published via hudson (or otherwise) job, thus to resolve 
+									 jar version correctly, we use a variable (not managed by these gradle scripts) called
+									 REPO_BID - you will find we do NOT set version to these artifacts, this is intentional 
+									 this allows build jobs to set version & resolve later
+*/
+
 publishing.publications {
     thisJarPublication(MavenPublication) {
 			from project.components.java
