--- a/savedsearch-web/build.gradle
+++ b/savedsearch-web/build.gradle
@@ -1,27 +1,17 @@
 import org.gradle.api.plugins.jetty.internal.Monitor
 
 apply plugin: 'war'
-//apply plugin: 'eclipse-wtp'
-// Directory where the restful API doc is generated
+apply from: 'test.gradle'
+
 ext.restDocRootDir = "${buildDir}/restdoc" 
 ext.restDocOutputDir = "${restDocRootDir}"
-
-apply plugin: 'maven-publish'
-apply plugin: 'TestInfraPlugin'
-apply from: 'test.gradle'
-apply plugin: 'artifactory-publish'
-
-group='com.oracle.emaas.emcpssf'
-
-jar.archiveName='emcpssf_qa_test.jar'
+war.archiveName "savedsearch-web.war"
 
 configurations {
 	restDoc
 	enunciateCore
 	ftpAntTask
 }
-
-war.archiveName "savedsearch-web.war"
 
 war {
 	from('src/main/java') { 
@@ -48,6 +38,21 @@ sourceSets {
 	}
 }
 
+/*
+	NOTE: 
+		PUBLISHING ==> We use artifactoryPublish to publish artifacts, in publications block
+				we publish...
+					1. integTestJar (this is the JAR containing test code)
+					2. savedsearch-web jar itself - to do this, we do explicit JAR task (remember this is war project)
+				The "group" of both these JARs is NOT com.oracle.emaas.emcpssf - instead 
+				there's a "test" added to it - Hudson jobs prohibit publishing with root group & 
+				this allows for clear separation of artifacts. 
+		RESOLUTION ==> All JARs are produced & published via hudson (or otherwise) job, thus to resolve 
+									 jar version correctly, we use a variable (not managed by these gradle scripts) called
+									 REPO_BID - you will find we do NOT set version to these artifacts, this is intentional 
+									 this allows build jobs to set version & resolve later
+*/
+
 publishing.publications {
 	integTest(MavenPublication) {
 		setArtifactId(project.name + '-' + integTestJar.appendix)
@@ -56,15 +61,19 @@ publishing.publications {
 	}
 		
 	thisJarPublication(MavenPublication) {
-		from project.components.java
-		artifactId jar.baseName
 		setGroupId('com.oracle.emaas.emcpssf.test')
+		artifact jar
 	}
 }
 
 artifactoryPublish {
 	publications('integTest')
 	publications('thisJarPublication')
+}
+
+task jarMe(type: Jar) {
+	from project.components.java
+	baseName = "${project.archivesBaseName}"
 }
 
 task runQATestSuite(type: Test){
@@ -80,15 +89,14 @@ task runQATestSuite(type: Test){
 /**
  * Generates documentation for the REST service API
  */  
-task restDoc {
- 
-    // Configure task input and output to not generate the doc again when the 
-    // source file have not changed
-    inputs.files 'src/main/java/oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest',  'src/main/java/oracle/sysman/emSDK/emaas/platform/savedsearch/ws/navigation'
-    outputs.dir restDocOutputDir
+task restDoc { 
+	// Configure task input and output to not generate the doc again when the source file have not changed
+	
+	inputs.files	'src/main/java/oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest',  
+								'src/main/java/oracle/sysman/emSDK/emaas/platform/savedsearch/ws/navigation'
+						    outputs.dir restDocOutputDir
 }
-restDoc << {
-    
+restDoc << {  
     // Declare the enunciate ant task
     ant.taskdef (name: 'enunciate', 
         classname: 'org.codehaus.enunciate.main.EnunciateTask',
@@ -133,24 +141,29 @@ task ftpRestDoc << {
 	}
 
 sourceSets {
-                            test{
-                                java {
-                                          srcDirs = ['src/test/java']
-                                }
-                                resources.srcDirs = ['src/test/java']
-                            }
+	test{
+		java {
+			srcDirs = ['src/test/java']
+		}
+	resources.srcDirs = ['src/test/java']
+	}
  }
+ 
 dependencies {
 	providedCompile project(':savedsearch-entities'){transitive = false}
 	providedCompile project(':savedsearch-core'){transitive = false}
+	providedCompile(group: 'com.oracle.adf', name: 'wls-api', version: '12.1.2-0-0')
+  providedCompile(group: 'com.oracle.emaas.emcpsm', name: 'registry-lookup-client', version: '1.0.0+') 
+	providedCompile(group: 'com.oracle.emaas.emcpsm', name: 'registry-client', version: '1.0.0+') 
+
 	providedCompile(group: 'javax.servlet', name:'servlet-api', version:'2.5'){transitive = false}
 	providedCompile(group: 'com.sun.jersey', name: 'jersey-client', version: '1.17')
 	providedCompile(group: 'com.sun.jersey.contribs', name: 'jersey-multipart', version: '1.17.1') { transitive = false }
 	providedCompile(group: 'org.codehaus.jettison', name: 'jettison', version: '1.3.4'){transitive = false}
 	providedCompile(group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.0'){transitive = false}
         
-    providedCompile(group: 'org.apache.logging.log4j', name:'log4j-core', version:'2.0.1'){transitive = false}
-    providedCompile(group: 'org.apache.logging.log4j', name:'log4j-api', version:'2.0.1'){transitive = false}
+  providedCompile(group: 'org.apache.logging.log4j', name:'log4j-core', version:'2.0.1'){transitive = false}
+  providedCompile(group: 'org.apache.logging.log4j', name:'log4j-api', version:'2.0.1'){transitive = false}
 
 	providedCompile(group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.13'){transitive = false}
 	providedCompile(group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'){transitive = false}
@@ -169,11 +182,11 @@ dependencies {
 	providedCompile(group: 'com.jayway.restassured', name:'xml-path', version:'2.3.1'){transitive = false}
 	providedCompile(group: 'com.jayway.restassured', name:'rest-assured-common', version:'2.3.1')
 	providedCompile(group: 'com.jayway.restassured', name:'rest-assured', version:'2.3.1')
-        providedCompile(group: 'com.oracle.emaas.emcpsm', name:'registry-lookup-client', version:'1.0.0+') 
-        providedCompile(group: 'com.oracle.emaas', name: 'emaas-platform-tenant-sdk', version: '0.2') {
-            exclude group: 'emaas.platform', module: 'registry-lookup-client'
-            exclude group: 'emaas.platform', module: 'registry-client'
-        }	
+  providedCompile(group: 'com.oracle.emaas.emcpsm', name:'registry-lookup-client', version:'1.0.0+') 
+  providedCompile(group: 'com.oracle.emaas', name: 'emaas-platform-tenant-sdk', version: '0.2') {
+      exclude group: 'emaas.platform', module: 'registry-lookup-client'
+      exclude group: 'emaas.platform', module: 'registry-client'
+  }	
 
 	enunciateCore 'org.codehaus.enunciate:enunciate-core:1.28'
 	enunciateCore 'org.codehaus.enunciate:enunciate-core:1.28'
@@ -194,3 +207,4 @@ dependencies {
  }
 
 build.dependsOn integTestJar
+build.dependsOn jarMe
