JIRA:EMCPSSF-150 add missing source sets to jars are not empty

--- a/savedsearch-web/build.gradle
+++ b/savedsearch-web/build.gradle
@@ -36,6 +36,9 @@ sourceSets {
 		}
 		resources.srcDirs = ['src/test/java']
 	}
+	main {
+		java.srcDir 'src/main/java'
+	}
 }
 
 /*
@@ -72,7 +75,7 @@ artifactoryPublish {
 }
 
 task jarMe(type: Jar) {
-	from project.components.java
+	from sourceSets.main.output
 	baseName = "${project.archivesBaseName}"
 }
 
