--- a/savedsearch-web/.classpath
+++ b/savedsearch-web/.classpath
@@ -16,10 +16,10 @@
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/jersey-server-1.17.1.jar"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/jersey-servlet-1.17.1.jar"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/jettison-1.3.4.jar"/>
-	<classpathentry kind="var" path="SSF/dependencies/artifactory/json-path-1.8.1.jar"/>
+	<classpathentry kind="var" path="SSF/dependencies/artifactory/json-path-2.3.1.jar"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/rest-assured-2.3.1.jar"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/testng-6.8.8.jar"/>
-	<classpathentry kind="var" path="SSF/dependencies/artifactory/wlfullclient-2.6.jar"/>
+	<classpathentry kind="var" path="SSF/dependencies/artifactory/wlfullclient-12.1.2-0-0.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/savedsearch-core"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/commons-codec-1.6.jar"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/commons-lang3-3.1.jar"/>
@@ -40,7 +40,7 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="var" path="SSF/dependencies/artifactory/xml-path-1.9.0.jar"/>
+	<classpathentry kind="var" path="SSF/dependencies/artifactory/xml-path-2.3.1.jar"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/rest-assured-common-2.3.1.jar"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/log4j-api-2.0.1.jar"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/log4j-core-2.0.1.jar"/>
