--- a/gradle.properties
+++ b/gradle.properties
@@ -27,3 +27,4 @@ artifactory_repoName=emaas-virtual
 artifactory_repoKey=emaas-sandbox-local
 publishGroup=com.oracle.emaas.emcpssf
 group=com.oracle.emaas.emcpssf
+artifactory_publish_repoKey=emaas-sandbox-local
