--- a/tests/suites/emcpssf_dev_test.gradle
+++ b/tests/suites/emcpssf_dev_test.gradle
@@ -67,15 +67,10 @@ dependencies {
 	}
 }
 
-task UndeploySSFAPI(type:Exec) {
-
-        commandLine 'gradle', '-p', getGitRoot()+'/savedsearch-ear/', 'appServerUndeploy'
 
 
-}
 
-
-task DeploySSFAPI(type:Exec,dependsOn: UndeploySSFAPI) {
+task DeploySSFAPI(type:Exec) {
 
         commandLine 'gradle', '-p', getGitRoot()+'/savedsearch-ear/', 'appServerDeploy'
         }
