--- a/gradle.properties
+++ b/gradle.properties
@@ -28,3 +28,4 @@ artifactory_repoKey=emaas-sandbox-local
 publishGroup=com.oracle.emaas.emcpssf
 group=com.oracle.emaas.emcpssf
 artifactory_publish_repoKey=emaas-sandbox-local
+artifactory_virtual_repoKey=emaas-virtual
