--- a/tests/suites/emcpssf_update_test_3n.gradle
+++ b/tests/suites/emcpssf_update_test_3n.gradle
@@ -25,7 +25,7 @@
 buildscript {
     repositories {
         maven {
-            url = "${artifactory_contextUrl}/emaas-virtual" }
+            url = "${artifactory_contextUrl}/${artifactory_virtual_repoKey}" }
     }
     dependencies {
         classpath group: 'com.oracle.emaas.emdi', name: 'TestInfraPlugin', version: "${testinfraVersion}", transitive: true
@@ -33,7 +33,7 @@ buildscript {
 }
 repositories {
     maven {
-        url = "${artifactory_contextUrl}/emaas-virtual"
+        url = "${artifactory_contextUrl}/${artifactory_virtual_repoKey}"
     }
 }
 apply plugin: 'TestInfraPlugin'
@@ -47,7 +47,7 @@ import com.oracle.emdi.gradle.testinfra.tasks.EMTest;
 repositories {
 	mavenLocal()
         maven {
-            url = "${artifactory_contextUrl}/emaas-virtual" }
+            url = "${artifactory_contextUrl}/${artifactory_virtual_repoKey}" }
     }
 dependencies {
     testConfig(group: 'com.oracle.emaas.emcpssf', name: 'savedsearch-tools-integ-tests', version: '0.1'){
