add data cleanup

--- a/tests/suites/emcpssf_dev_test.gradle
+++ b/tests/suites/emcpssf_dev_test.gradle
@@ -83,8 +83,8 @@ task PropsCopy(type: Copy,dependsOn: DeploySSFAPI) {
 
 
 
-     task DEVTest(type:EMTest,dependsOn: PropsCopy){	
-		
+     task DEVTest(type:EMTest,dependsOn: [PropsCopy,cleanUpDB]){	
+	sleep( 300000)
 	include "oracle/sysman/emaas/savedsearch/UtilTest.class"
 	include "oracle/sysman/emaas/savedsearch/JSONUtilTest.class"
 	include "oracle/sysman/emaas/savedsearch/EntityJsonUtilTest.class"			
