--- a/tests/suites/emcpssf_qa_test.gradle
+++ b/tests/suites/emcpssf_qa_test.gradle
@@ -88,7 +88,7 @@ task PropsCopy(type: Copy,dependsOn: DeploySSFAPI) {
 
 
 
-     task QATest(type:EMTest,dependsOn: PropsCopy){
+     task QATest(type:EMTest,dependsOn: [PropsCopy,cleanUpDB]){
  include "oracle/sysman/emSDK/emaas/platform/savedsearch/test/category/*"
 include "oracle/sysman/emSDK/emaas/platform/savedsearch/test/common/*"
 include "oracle/sysman/emSDK/emaas/platform/savedsearch/test/exception/*"
